# libshout_aac

./: Makefile.am  README  aac.c  configure.ac
